--- a/BackFight/app/src/main/res/layout/items_and_stats_list_item.xml
+++ b/BackFight/app/src/main/res/layout/items_and_stats_list_item.xml
@@ -20,7 +20,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/fragment_list_item_img"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="Large Text" />
 
 </RelativeLayout>
