--- a/BackFight/app/src/main/res/layout/activity_lobby.xml
+++ b/BackFight/app/src/main/res/layout/activity_lobby.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/btn_BackgroundColor"
@@ -38,8 +37,10 @@
         android:id="@+id/activity_lobby_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/lobby_title"
         android:textColor="@color/btn_TextColor"
@@ -51,8 +52,10 @@
         android:id="@+id/activity_lobby_rg_gridType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/btn_BackgroundColor"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -83,13 +86,44 @@
         android:id="@+id/activity_lobby_np_mapSize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/btn_BackgroundColor"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_lobby_rg_gridType" />
+
+    <TextView
+        android:id="@+id/activity_lobby_tv_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/btn_TextColor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_lobby_tv_title"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/activity_lobby_lv_players"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/btn_BackgroundColor"
+        android:textColor="@color/btn_TextColor"
+        app:layout_constraintBottom_toTopOf="@+id/activity_lobby_btn_back"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/activity_lobby_rg_gridType"
+        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_id" />
 
 
 </android.support.constraint.ConstraintLayout>
