--- a/WeatherAarhusgroup07/app/src/main/res/layout/content_main.xml
+++ b/WeatherAarhusgroup07/app/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/content_main_iv_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
@@ -52,10 +52,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
-        android:text="Current:"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        android:text="@string/current"
+        app:layout_constraintLeft_toRightOf="@+id/content_main_iv_icon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/content_main_iv_icon" />
 
     <TextView
         android:id="@+id/content_main_tv_current_weather"
@@ -64,7 +64,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
-        android:text="weather"
+        android:text="@string/weather"
         app:layout_constraintLeft_toLeftOf="@+id/content_main_tv_current"
         app:layout_constraintRight_toRightOf="@+id/content_main_tv_current"
         app:layout_constraintTop_toBottomOf="@+id/content_main_tv_current" />
