--- a/BackFight/app/src/main/res/layout/item_playerclass.xml
+++ b/BackFight/app/src/main/res/layout/item_playerclass.xml
@@ -25,7 +25,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/player32" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
