--- a/BackFight/app/src/main/res/layout/item_playerclass.xml
+++ b/BackFight/app/src/main/res/layout/item_playerclass.xml
@@ -19,8 +19,8 @@
 
     <ImageView
         android:id="@+id/item_playerclass_iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
