--- a/BackFight/app/src/main/res/layout/activity_splash.xml
+++ b/BackFight/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/start_BackgroundColor"
-    tools:context="com.studio.jarn.backfight.SplashActivity">
+    tools:context="com.studio.jarn.backfight.StartScreen.SplashActivity">
 
     <ImageView
         android:id="@+id/activity_splash_img_title"
