--- a/BackFight/app/src/main/res/layout/fragment_items_and_stats.xml
+++ b/BackFight/app/src/main/res/layout/fragment_items_and_stats.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="com.studio.jarn.backfight.fragment.ItemsAndStatsFragment">
+    tools:context="com.studio.jarn.backfight.Fragment.ItemsAndStatsFragment">
 
     <TextView
         android:id="@+id/fragment_item_tv_name"
