--- a/BackFight/app/src/main/res/layout/fragment_items_and_stats.xml
+++ b/BackFight/app/src/main/res/layout/fragment_items_and_stats.xml
@@ -16,7 +16,6 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:paddingTop="8dp"
-        android:text="Test"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         android:textStyle="bold"
@@ -53,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:text="Hp:"
+        android:text="@string/hp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fragment_item_gl_stats_seperator" />
 
@@ -63,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@string/dmg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_item_tv_hp" />
 
