--- a/BackFight/app/src/main/res/layout-xlarge/fragment_monster_details.xml
+++ b/BackFight/app/src/main/res/layout-xlarge/fragment_monster_details.xml
@@ -12,14 +12,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/name"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/fragment_monster_iv_image"
         app:layout_constraintRight_toRightOf="@+id/fragment_monster_iv_image"
         app:layout_constraintTop_toBottomOf="@+id/fragment_monster_iv_image" />
 
     <ImageView
         android:id="@+id/fragment_monster_iv_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/hp"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/fragment_monster_tv_name"
         app:layout_constraintRight_toRightOf="@+id/fragment_monster_tv_name"
         app:layout_constraintTop_toBottomOf="@+id/fragment_monster_tv_name" />
@@ -46,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/dmg"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="@+id/fragment_monster_tv_hp"
         app:layout_constraintRight_toRightOf="@+id/fragment_monster_tv_hp"
         app:layout_constraintTop_toBottomOf="@+id/fragment_monster_tv_hp" />
