Removed hardcoded values.

--- a/BackFight/app/src/main/res/layout-xlarge/game_board_activity.xml
+++ b/BackFight/app/src/main/res/layout-xlarge/game_board_activity.xml
@@ -24,9 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.80"
-        tools:layout_editor_absoluteX="444dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintGuide_percent="0.80"/>
 
     <ImageView
         android:id="@+id/game_board_activity_iv_hide_items"
