--- a/BackFight/app/src/main/res/layout/items_and_stats_list_item.xml
+++ b/BackFight/app/src/main/res/layout/items_and_stats_list_item.xml
@@ -19,7 +19,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/fragment_list_item_img"
-        android:text="Large Text" />
+        android:layout_toRightOf="@+id/fragment_list_item_img"/>
 
 </RelativeLayout>
