--- a/BackFight/app/src/main/res/layout-xlarge/fragment_item_details.xml
+++ b/BackFight/app/src/main/res/layout-xlarge/fragment_item_details.xml
@@ -17,7 +17,7 @@
         android:id="@+id/fragment_item_details_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/fragment_item_details_title"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +30,7 @@
         android:id="@+id/fragment_item_details_tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
+        android:text="@string/fragment_item_details_description"
         android:textSize="24sp"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -43,7 +43,7 @@
         android:id="@+id/fragment_item_details_tv_stats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stats"
+        android:text="@string/fragment_item_details_stats"
         android:textSize="24sp" />
 
     <!-- Inspiration from http://stackoverflow.com/questions/14779688/put-buttons-at-bottom-of-screen-with-linearlayout -->
