Made Tablet layout

--- a/BackFight/app/src/main/res/layout-large/activity_lobby.xml
+++ b/BackFight/app/src/main/res/layout-large/activity_lobby.xml
@@ -14,31 +14,32 @@
         android:focusable="true"
         android:focusableInTouchMode="true" />
 
+
     <Button
         android:id="@+id/activity_lobby_btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/Tablet_ButtonWidth"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/all_back"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/activity_lobby_btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/Tablet_ButtonWidth"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/lobby_startGame"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -53,58 +54,23 @@
         android:layout_marginTop="8dp"
         android:text="@string/lobby_title"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/activity_lobby_rg_gridType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/btn_BackgroundColor"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_title">
-
-
-        <RadioButton
-            android:id="@+id/activity_lobby_rb_default"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/btn_BackgroundColor"
-            android:checked="true"
-            android:text="@string/lobby_default"
-            android:textColor="@color/btn_TextColor"
-            android:textSize="@dimen/Phone_TextSize" />
-
-        <RadioButton
-            android:id="@+id/activity_lobby_rb_maze"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/btn_BackgroundColor"
-            android:text="@string/lobby_maze"
-            android:textColor="@color/btn_TextColor"
-            android:textSize="@dimen/Phone_TextSize" />
-
-    </RadioGroup>
-
     <NumberPicker
         android:id="@+id/activity_lobby_np_mapSize"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:background="@color/btn_BackgroundColor"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.01"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_lobby_rg_gridType"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_lobby_rg_gridType" />
 
@@ -118,7 +84,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/activity_lobby_tv_title"
         app:layout_constraintTop_toTopOf="parent" />
@@ -134,9 +100,48 @@
         android:background="@color/btn_BackgroundColor"
         android:textColor="@color/btn_TextColor"
         app:layout_constraintBottom_toTopOf="@+id/activity_lobby_btn_back"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/activity_lobby_rg_gridType"
-        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_id" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_id"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <RadioGroup
+        android:id="@+id/activity_lobby_rg_gridType"
+        android:layout_width="137dp"
+        android:layout_height="65dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="31dp"
+        android:background="@color/btn_BackgroundColor"
+        app:layout_constraintHorizontal_bias="0.519"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_lobby_tv_title">
+
+
+        <RadioButton
+            android:id="@+id/activity_lobby_rb_default"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_BackgroundColor"
+            android:checked="true"
+            android:text="@string/lobby_default"
+            android:textColor="@color/btn_TextColor"
+            android:textSize="@dimen/Tablet_TextSize" />
+
+        <RadioButton
+            android:id="@+id/activity_lobby_rb_maze"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/btn_BackgroundColor"
+            android:text="@string/lobby_maze"
+            android:textColor="@color/btn_TextColor"
+            android:textSize="@dimen/Tablet_TextSize" />
+
+    </RadioGroup>
 
 
 </android.support.constraint.ConstraintLayout>
