--- a/BackFight/app/src/main/res/layout-large/activity_main_menu.xml
+++ b/BackFight/app/src/main/res/layout-large/activity_main_menu.xml
@@ -52,7 +52,7 @@
     <Button
         android:id="@+id/activity_mainMenu_btn_newGame"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -60,18 +60,18 @@
         android:background="@color/btn_BackgroundColor"
         android:text="@string/mainMenu_newGame"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_5Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_45Procent"
         app:layout_constraintTop_toTopOf="@+id/activity_mainMenu_gl_25ProcentHorizontal"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintVertical_bias="0.114" />
 
     <Button
         android:id="@+id/activity_mainMenu_btn_spectateGame"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -79,25 +79,26 @@
         android:background="@color/btn_BackgroundColor"
         android:text="@string/mainMenu_spectateGame"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_55Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_95Procent"
         app:layout_constraintTop_toTopOf="@+id/activity_mainMenu_gl_25ProcentHorizontal"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintVertical_bias="0.115" />
 
     <Button
         android:id="@+id/activity_mainMenu_btn_settings"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/mainMenu_settings"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_5Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_45Procent"
         app:layout_constraintTop_toBottomOf="@+id/activity_mainMenu_btn_newGame" />
@@ -105,14 +106,15 @@
     <Button
         android:id="@+id/activity_mainMenu_btn_rules"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="22dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/mainMenu_rules"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_55Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_95Procent"
         app:layout_constraintTop_toBottomOf="@+id/activity_mainMenu_btn_spectateGame" />
@@ -120,14 +122,14 @@
     <Button
         android:id="@+id/activity_mainMenu_btn_exit"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/Tablet_ButtonHeight"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@color/btn_BackgroundColor"
         android:text="@string/mainMenu_exit"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_25Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_75Procent"
@@ -143,7 +145,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/app_name"
         android:textColor="@color/start_TextColor"
-        android:textSize="@dimen/Phone_TitleSize"
+        android:textSize="@dimen/Tablet_TitleSize"
         app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_25ProcentHorizontal"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_5Procent"
         app:layout_constraintRight_toLeftOf="@+id/activity_mainMenu_gl_95Procent"
