--- a/BackFight/app/src/main/res/layout-large/activity_new_game.xml
+++ b/BackFight/app/src/main/res/layout-large/activity_new_game.xml
@@ -25,7 +25,7 @@
         android:background="@color/btn_BackgroundColor"
         android:text="@string/newGame_create"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_horizontal"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,7 +51,7 @@
         android:background="@color/btn_BackgroundColor"
         android:text="@string/newGame_join"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toTopOf="@+id/activity_mainMenu_gl_horizontal"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mainMenu_gl_vertical"
@@ -70,7 +70,7 @@
         android:background="@color/btn_BackgroundColor"
         android:text="@string/all_back"
         android:textColor="@color/btn_TextColor"
-        android:textSize="@dimen/Phone_TextSize"
+        android:textSize="@dimen/Tablet_TextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
