--- a/BackFight/app/src/main/res/layout/game_board_activity.xml
+++ b/BackFight/app/src/main/res/layout/game_board_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -41,6 +40,7 @@
         android:id="@+id/game_board_activity_iv_show_items"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:src="@drawable/arrow_left_icon"
@@ -67,6 +67,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/btn_TextColor"
+        android:textSize="@dimen/Phone_TextSize"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,6 +79,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textColor="@color/btn_TextColor"
+        android:textSize="@dimen/Phone_TextSize"
         app:layout_constraintLeft_toRightOf="@+id/game_board_activity_tv_actionCount"
         app:layout_constraintTop_toTopOf="parent" />
 
